// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComponentPlayground /> Should render the dark theme correctly 1`] = `
<div
  class="theme-dark jELORc"
>
  <div
    class="playground"
  >
    <div
      class="playgroundCode"
    >
      <div
        class="react-codemirror2 playgroundStage"
      >
        
      </div>
    </div>
    <div
      class="playgroundPreview"
    >
      <div>
        <div
          class="previewArea"
        >
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ComponentPlayground /> Should render the light theme correctly 1`] = `
<div
  class="theme-light jELORc"
>
  <div
    class="playground"
  >
    <div
      class="playgroundCode"
    >
      <div
        class="react-codemirror2 playgroundStage"
      >
        
      </div>
    </div>
    <div
      class="playgroundPreview"
    >
      <div>
        <div
          class="previewArea"
        >
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ComponentPlayground /> Should render with a custom background color 1`] = `
<div
  class="theme-light TlFwj"
>
  <div
    class="playground"
  >
    <div
      class="playgroundCode"
    >
      <div
        class="react-codemirror2 playgroundStage"
      >
        
      </div>
    </div>
    <div
      class="playgroundPreview"
    >
      <div>
        <div
          class="previewArea"
        >
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ComponentPlayground /> Should render with a custom code block 1`] = `
<div
  class="theme-light TlFwj"
>
  <div
    class="playground"
  >
    <div
      class="playgroundCode"
    >
      <div
        class="react-codemirror2 playgroundStage"
      >
        
      </div>
    </div>
    <div
      class="playgroundPreview"
    >
      <div>
        <div
          class="previewArea"
        >
          
        </div>
      </div>
    </div>
  </div>
</div>
`;
